// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Infos Endurance should render with minute at 10: minutes 10 1`] = `
<div
  className="Infos__Endurance progress"
>
  <div
    aria-valuemax={60}
    aria-valuemin={1}
    aria-valuenow={50}
    className="progress-bar progress-bar-striped"
    role="progressbar"
    style={
      Object {
        "width": "83%",
      }
    }
  >
    10
     minutes
  </div>
</div>
`;

exports[`UI Infos Endurance should render with minute at 45: minutes 45 1`] = `
<div
  className="Infos__Endurance progress"
>
  <div
    aria-valuemax={60}
    aria-valuemin={1}
    aria-valuenow={15}
    className="progress-bar progress-bar-striped"
    role="progressbar"
    style={
      Object {
        "width": "25%",
      }
    }
  >
    45
     minutes
  </div>
</div>
`;

exports[`UI Infos Endurance should render with no character: no character 1`] = `null`;

exports[`UI Infos Endurance should render with no minute: no minutes 1`] = `
<div
  className="Infos__Endurance"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="progress-bar bg-success"
    role="progressbar"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UI Infos Info connected component Dead character: dead character 1`] = `
<div
  className="Infos Game__Container Header"
>
  <div
    className="Infos__Position"
  >
    Nullepart
  </div>
  <div
    className="Infos__ScreenName"
  >
    <strong>
      Dead Character
    </strong>
     (
    2
    ) | Grade 
    2
     galon 
    1
  </div>
  <div
    className="Infos__Endurance"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={100}
      className="progress-bar bg-success"
      role="progressbar"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`UI Infos Info connected component Default character: default character 1`] = `
<div
  className="Infos Game__Container Header"
>
  <div
    className="Infos__Position"
  >
    Sur 
    <a
      href="gps"
    >
      Althian
    </a>
     en X = 
    15
     
    <b>
      | 
    </b>
    Y = 
    -5
  </div>
  <div
    className="Infos__ScreenName"
  >
    <strong>
      Character in action
    </strong>
     (
    1
    ) | Grade 
    2
     galon 
    1
  </div>
  <div
    className="Infos__Endurance progress"
  >
    <div
      aria-valuemax={60}
      aria-valuemin={1}
      aria-valuenow={43}
      className="progress-bar progress-bar-striped"
      role="progressbar"
      style={
        Object {
          "width": "72%",
        }
      }
    >
      17
       minutes
    </div>
  </div>
</div>
`;

exports[`UI Infos Info connected component Full endurance character: full character 1`] = `
<div
  className="Infos Game__Container Header"
>
  <div
    className="Infos__Position"
  >
    Sur 
    <a
      href="gps"
    >
      Althian
    </a>
     en X = 
    1
     
    <b>
      | 
    </b>
    Y = 
    2
  </div>
  <div
    className="Infos__ScreenName"
  >
    <strong>
      Full Endurance Character
    </strong>
     (
    3
    ) | Grade 
    2
     galon 
    1
  </div>
  <div
    className="Infos__Endurance"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={100}
      className="progress-bar bg-success"
      role="progressbar"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`UI Infos Info connected component no character: no character 1`] = `
<div
  className="Infos Game__Container Header"
/>
`;

exports[`UI Infos Position should render with no character: no character 1`] = `null`;

exports[`UI Infos Position should render with no position: no position 1`] = `
<div
  className="Infos__Position"
>
  Nullepart
</div>
`;

exports[`UI Infos Position should render with position in 0 / 0 on Althian: position 0 / 0 on althian 1`] = `
<div
  className="Infos__Position"
>
  Sur 
  <a
    href="gps"
  >
    Althian
  </a>
   en X = 
  0
   
  <b>
    | 
  </b>
  Y = 
  0
</div>
`;

exports[`UI Infos ScreenName should render with name Jest, mat 1, grade 2g3: jest mat 1 G2g3 1`] = `
<div
  className="Infos__ScreenName"
>
  <strong>
    Jest
  </strong>
   (
  1
  ) | Grade 
  2
   galon 
  3
</div>
`;

exports[`UI Infos ScreenName should render with no character: no character 1`] = `null`;
